--- a/Shooter/Shooter.Engine/Shooter.Engine.csproj
+++ b/Shooter/Shooter.Engine/Shooter.Engine.csproj
@@ -92,11 +92,26 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Camera.cs" />
-    <Compile Include="ICanDraw.cs" />
-    <Compile Include="ICanUpdate.cs" />
+    <Compile Include="Cameras\Camera.cs" />
+    <Compile Include="Core\ICanUpdate.cs" />
+    <Compile Include="Scene\IDrawableSceneObject.cs" />
+    <Compile Include="Input\InputManager.cs" />
+    <Compile Include="Xna.Extensions\MouseStateExtensions.cs" />
+    <Compile Include="Viewports\Perspective.cs" />
+    <Compile Include="Viewports\PerspectiveManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Texture2DHelper.cs" />
+    <Compile Include="Core\Rectangle2D.cs" />
+    <Compile Include="Scene\SceneManager.cs" />
+    <Compile Include="ShooterEngine.cs" />
+    <Compile Include="Xna.Extensions\SpriteBatchExtensions.cs" />
+    <Compile Include="Xna.Extensions\Texture2DExtensions.cs" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Shooter\Farseer\Farseer Physics XNA.csproj">
+      <Project>{0A850700-1ABB-4288-A391-6726B90EBEB9}</Project>
+      <Name>Farseer Physics XNA</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
