--- a/Shooter/Shooter.Game/Shooter.Gameplay.csproj
+++ b/Shooter/Shooter.Game/Shooter.Gameplay.csproj
@@ -7,8 +7,8 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Shooter.Game</RootNamespace>
-    <AssemblyName>Shooter.Game</AssemblyName>
+    <RootNamespace>Shooter.Gameplay</RootNamespace>
+    <AssemblyName>Shooter.Gameplay</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <XnaFrameworkVersion>v4.0</XnaFrameworkVersion>
@@ -98,7 +98,10 @@
     <Compile Include="Robot.cs" />
     <Compile Include="RobotBodyLinker.cs" />
     <Compile Include="RelativeRobotController.cs" />
+    <Compile Include="RobotFactory.cs" />
+    <Compile Include="RobotProxy.cs" />
     <Compile Include="RobotView.cs" />
+    <Compile Include="Tiler.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Shooter.Engine\Shooter.Engine.csproj">
