--- a/Shooter/Shooter.Gameplay/Shooter.Gameplay.csproj
+++ b/Shooter/Shooter.Gameplay/Shooter.Gameplay.csproj
@@ -95,12 +95,12 @@
     <Compile Include="AbsoluteRobotController.cs" />
     <Compile Include="CameraController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Robot.cs" />
+    <Compile Include="Robot\RobotModel.cs" />
     <Compile Include="RelativeRobotController.cs" />
-    <Compile Include="RobotFactory.cs" />
-    <Compile Include="RobotLinker.cs" />
-    <Compile Include="RobotProxy.cs" />
-    <Compile Include="RobotView.cs" />
+    <Compile Include="Robot\RobotFactory.cs" />
+    <Compile Include="Robot\RobotLinker.cs" />
+    <Compile Include="Robot\RobotProxy.cs" />
+    <Compile Include="Robot\RobotView.cs" />
     <Compile Include="Tiler.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -117,6 +117,7 @@
       <Name>Shooter.Engine</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
   <!--
